# PUG-Legal-Case-Filling-System

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase1_auth_masters.py  0002_phase2_cases.py  0003_phase3_workflow.py  0004_phase4_court.py  0005_phase5_notifications.py  0006_phase7_scheduled_reports.py  0007_phase8_audit.py  0008_phase9_backup.py  0009_phase10_settings.py  0010_phase12_2fa.py  0011_phase13_closure.py  0012_phase17_lawyer_divisions.py  0013_phase18_signature.py  0014_phase19_transition_attachments.py  0014_phase19_xfer_attachments.py  0015_phase25_email_queue.py  0016_phase27_saved_filters.py  0017_phase30_case_views.py  0018_phase31_user_locale.py  0019_phase32_push_subs.py  0020_phase33_sla_breach.py  0021_phase34_hearing_reminders.py  0022_phase35_job_runs.py  0023_phase36_cheque_attachments.py  (+11 more)
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_backup.py  test_capabilities.py  test_cases.py  test_closure.py  test_court.py  test_dashboard.py  test_hardening.py  test_health.py  test_notifications.py  test_phase17_signatories.py  test_phase18_password_signature.py  test_phase19_transition_attachments.py  test_phase20_lawyer_closure.py  test_phase21_court_attachment.py  test_phase22_case_search.py  test_phase23_inbox_scope.py  test_phase24_signed_form.py  test_phase25_email_queue.py  test_phase26_sse_stream.py  test_phase27_saved_filters.py  test_phase28_bulk.py  test_phase29_search_full.py  test_phase30_forensics.py  test_phase31_locale.py  test_phase32_push.py  test_phase33_sla_breach.py  test_phase34_hearing_reminders.py  test_phase35_jobs.py  test_phase36_attachments.py  test_phase37_user_all_divisions.py  test_phase38_cheque_copy.py  test_phase39_edit_window.py  test_phase40_partners.py  test_phase41_physical_docs.py  test_phase42_pgdump_backup.py  test_phase44_accountant_masters.py  test_phase45_phys_accept.py  (+7 more)
(+205 files in other folders)
