[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pug-legal-backend"
version = "0.1.0"
description = "PUG Legal Case Control System - Backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.2.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.12",
    "redis>=5.1.1",
    "celery>=5.4.0",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.4",
    "loguru>=0.7.2",
    "httpx>=0.27.2",
    "email-validator>=2.2.0",
    "cryptography>=43.0.0",
    "pyotp>=2.9.0",
    "qrcode>=8.0",
    "sentry-sdk[fastapi]>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "httpx>=0.27.2",
]
reports = [
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.0",
    "weasyprint>=63.0",
    "reportlab>=4.2.5",
    "pillow>=11.0.0",
]
# Phase 38: Tesseract bindings for the cheque-OCR pipeline. The
# system ``tesseract-ocr`` binary + (for PDF cheques) ``poppler``
# must be installed separately - the setup scripts do that.
ocr = [
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pillow>=11.0.0",
]

# Tell setuptools which top-level packages belong in the wheel.
# Without this, the `alembic/` folder at the backend root confuses
# auto-discovery ("Multiple top-level packages discovered").
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
